force-app/main/default/objects/ContentVersion/fields/FileNameMigration__c.field-meta.xml
<CustomField>
    <fullName>FileNameMigration__c</fullName>
    <label>Nome File Migrazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>