force-app/main/default/objects/ContentVersion/fields/JobNameMigration__c.field-meta.xml
<CustomField>
    <fullName>JobNameMigration__c</fullName>
    <label>Nome Job Migrazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>